# A0580_V2

./: .gitignore  create_doc_assistant.sh  pyproject.toml
doc_assistant/: .gitignore  README.md  main copy.py  main old.py  main.py  normalize_kb.ipynb  requirements.txt
doc_assistant/backend/: __init__.py
doc_assistant/backend/agents/: __init__.py  chat_agent.py  orchestrator copy.py  orchestrator.py  orchestrator.py_MAJ  query_kb_mapper_agent.py  search_agent..py.old  search_agent.py
doc_assistant/backend/agents/old/: no_result_handler_agent copy.py  (+7 more)
doc_assistant/backend/core/: __init__.py  context.py  conversation.py  memory.py
doc_assistant/backend/kb_management/: __init__.py  document_processor.py  manager copy.py  manager corrupt.py  manager.py  metadata_handler.py
doc_assistant/backend/types/: response_types.py
doc_assistant/backend/utils/: __init__.py  config.py  exceptions.py  filter_utils.py  logger.py  string_nomalizer.py
doc_assistant/frontend/: __init__.py
doc_assistant/frontend/components/: __init__.py  chat_window.py  delete_docs_tab.py  delete_kb_tab.py  document_ingestion_tab copy.py  document_ingestion_tab.py  document_viewer_tab.py  failure_analysis.py  filter_tab.py  kb_creation_tab.py  llm_selector.py
doc_assistant/frontend/pages/: __init__.py  chat_page.py  kb_management.py  settings_page.py
doc_assistant/frontend/styles/: components.py  llm_selector.css  theme.py
doc_assistant/scripts/: clean_kbs.py  normalize_kb_id.py  test_normalise_doc_id.py
schema_mermaid_workflow_application/: workflow_de_filtrage_documentaire
(+8 files in other folders)
