[tool.poetry]
name = "a0580"
version = "0.1.0"
description = ""
authors = ["Anthony <a.sauvage@socofer.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dsrag = "^0.3.8"
chroma = "^0.2.0"
streamlit = "^1.39.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
