[tool.poetry]
name = "a0580"
version = "0.1.0"
description = ""
authors = ["Anthony <a.sauvage@socofer.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dsrag = "0.4.1"
chroma = "^0.2.0"
streamlit = "^1.39.0"
python-dotenv = "^1.0.1"
nltk = "^3.9.1"
vertexai = "^1.71.1"
google-generativeai = "^0.8.3"
pdf2image = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
